--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div id = shop>
             <h1 id = "header">Halloween sweet shop</h1>
             <h1 id="header">Level 1</h1>
-            <p id = "instructions">Instructions: Build your own Halloween sweet shop. Click to the button "Make sweet" to get your first sweets. When you have enough sweets, you can buy advertisement, worker, factory, robofactory or beltfactory to make tons of sweets. You can open your shop, when you have all of things to construct it. When you have build your shop, you can go to the next level to selling your sweets in your shop.<br>Have a lot of fun.</p>
+            <p>Instructions: Build your own Halloween sweet shop. Click to the button "Make sweet" to get your first sweets. When you have enough sweets, you can buy advertisement, worker, factory, robofactory or beltfactory to make tons of sweets. You can open your shop, when you have all of things to construct it. When you have build your shop, you can go to the next level to selling your sweets in your shop.<br>Have a lot of fun.</p>
             <!--Work-->
             <label>Your Sweets:</label>
             <var id = userMoney>0</var><label> Sweets</label><br>
